--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="link_imagem">Link da imagem</string>
     <string name="upload">➤</string>
     <string name="imagem_baixada">Imagem baixada</string>
+    <string name="no_url">Sem URLs detectadas.</string>
 </resources>
